--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
         <mybatis.version>3.0.3</mybatis.version>
         <mysql.version>8.0.33</mysql.version>
         <druid.version>1.2.20</druid.version>
+        <jakarta.version>2.1.1</jakarta.version>
+        <netty.version>4.1.100.Final</netty.version>
     </properties>
 
     <dependencyManagement>
@@ -56,13 +58,19 @@
         <dependency>
             <groupId>jakarta.annotation</groupId>
             <artifactId>jakarta.annotation-api</artifactId>
-            <version>2.1.1</version>
+            <version>${jakarta.version}</version>
         </dependency>
 
         <!-- Eureka Client -->
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>${netty.version}</version>
         </dependency>
 
         <!-- MyBatis -->
